<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="10dp"
            >
        <LinearLayout android:layout_width="match_parent"
                      android:layout_marginTop="5dp"
                      android:orientation="horizontal"
                      android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="20sp"
                      android:layout_gravity="center_vertical"
                      android:text="@string/sms_tv_send_frequence_text"/>
            <Spinner android:id="@+id/sms_send_frequence_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:entries="@array/emergency_sms_send_frequence"
                     ></Spinner>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_marginTop="5dp"
                      android:orientation="horizontal"
                      android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="20sp"
                      android:layout_gravity="center_vertical"
                      android:text="@string/sms_tv_stop_time_text"/>
            <Spinner android:id="@+id/sms_stop_time_id"
                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:entries="@array/emergency_sms_send_stop_condition"
                     ></Spinner>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="horizontal"
                  android:layout_margin="10dp"
                  android:layout_height="wrap_content">

            <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/confirm"
                    android:id="@+id/setting_sms_save"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:layout_marginRight="10dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textSize="20sp"
                    android:background="@color/desktop_title_bg"
                    />
            <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/cancel"
                    android:layout_weight="1"
                    android:id="@+id/setting_sms_cancel"
                    android:textColor="@color/white"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textSize="20sp"
                    android:background="@color/desktop_title_bg"
                    />

    </LinearLayout>
</LinearLayout>