<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <include layout="@layout/titlebar_container"/>

    <LinearLayout android:orientation="vertical"
                  android:layout_margin="20dp"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent"
                      android:focusable="true"
                      android:focusableInTouchMode="true"
                      android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textSize="20sp"
                  android:text="@string/emergency_tips_msg"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_height="wrap_content">
            <EditText android:layout_width="match_parent"
                      android:layout_marginTop="15dp"
                      android:singleLine="true"
                      android:hint="@string/user_emergency_phone_number_hint"
                      android:id="@+id/user_emergency_phone_number"
                      android:layout_height="wrap_content"/>
            <RelativeLayout android:layout_width="match_parent"
                            android:layout_marginBottom="15dp"
                            android:layout_height="match_parent">
                <Button android:layout_width="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@color/desktop_title_bg"
                        android:textColor="@color/white"
                        android:padding="8dp"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:text="@string/emergency_sms_save_text"
                        android:id="@+id/emergency_sms_save"
                        android:layout_height="wrap_content"/>
            </RelativeLayout>
           ,<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <ListView android:layout_width="match_parent"
                      android:id="@+id/user_emergency_phone_number_lists"
                      android:layout_height="wrap_content">

            </ListView>
           </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>